syntax = "proto3";

package salonapp.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/williamchand/fullstack-fastapi/backend-go/gen/proto/salonapp/v1;salonappv1";

service PublicService {
  rpc GetRegions(GetRegionsRequest) returns (GetRegionsResponse) {
    option (google.api.http) = { post: "/v1/public/regions" body: "*" };
  }
}

message GetRegionsRequest { repeated string regions = 1; }
message RegionInfo { string region = 1; int32 country_code = 2; bool supported = 3; }
message GetRegionsResponse { repeated RegionInfo regions = 1; }
